--- a/index.html
+++ b/index.html
@@ -2,34 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Random Card</title>
-  <script type="module" src="./playing-card.js"></script>
-  <style>
-    body {
-      background-color: #000;
-      color: white;
-      font-family: sans-serif;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-  </style>
+  <title>Card Deck Demo</title>
+  <link rel="stylesheet" href="style.css">
+  <script type="module" src="playing-card.js"></script>
+  <script defer src="script.js"></script>
 </head>
 <body>
-  <script>
-    const suits = ['♠', '♥', '♦', '♣'];
-    const values = ['A', '2', '3', '4', '5', '6', '7', '8', '9', '10', 'J', 'Q', 'K'];
-
-    // Random selection
-    const suit = suits[Math.floor(Math.random() * suits.length)];
-    const value = values[Math.floor(Math.random() * values.length)];
-
-    const card = document.createElement('playing-card');
-    card.setAttribute('suit', suit);
-    card.setAttribute('value', value);
-    card.setAttribute('flipped', 'false');
-    document.body.appendChild(card);
-  </script>
+  <h1>Deck of Cards</h1>
+  <button id="shuffle-btn">Shuffle Deck</button>
+  <div id="deck-container"></div>
 </body>
 </html>
