--- a/card_deck/index.html
+++ b/card_deck/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1>Card Deck</h1>
+  <button id="shuffle-btn">Shuffle Deck</button>
   <div id="deck-container"></div>
 
   <script src="script.js"></script>
