integrated next button

--- a/card_deck/index.html
+++ b/card_deck/index.html
@@ -8,7 +8,13 @@
 <body>
   <h1>Card Deck</h1>
   <button id="shuffle-btn">Shuffle Deck</button>
-  <div id="deck-container"></div>
+  <button id="next-btn">Next</button>
+
+  <div id="deck-area">
+    <div id="deck-container"></div>
+    <div id="discard-pile"></div>
+  </div>
+  
 
   <script src="script.js"></script>
 </body>
